--- a/HappinessMetric/Views/Report/UserReport.cshtml
+++ b/HappinessMetric/Views/Report/UserReport.cshtml
@@ -4,9 +4,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
-<link href="~/Content/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="~/Content/buttons.bootstrap.min.css" rel="stylesheet" />
+<link href="~/Content/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="https://cdn.datatables.net/buttons/1.3.1/css/buttons.dataTables.min.css" rel="stylesheet" />
 <script src="~/Scripts/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.3.1/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.27/build/pdfmake.min.js"></script>
+<script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.27/build/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.3.1/js/buttons.html5.min.js"></script>
 <script src="~/Scripts/jquery.toast.js"></script>
 <script src="~/Scripts/alert.js"></script>
 <form class="container" id="userreportform">
@@ -48,12 +54,32 @@
 </form>
 <script type="text/javascript">
     $(document).ready(function () {
+        var buttonCommon = {
+            exportOptions: {
+                format: {
+                    body: function (data, row, column, node) {
+                        // Strip $ from salary column to make it numeric
+                        return column === 5 ?
+                            data.replace(/[$,]/g, '') :
+                            data;
+                    }
+                }
+            }
+        };
         $('#userreporttable').DataTable({
             "scrollY": 200,
             "scrollX": true,
             dom: 'Bfrtip',
             buttons: [
-                'copy', 'csv', 'excel', 'pdf', 'print'
+            //$.extend(true, {}, buttonCommon, {
+            //    extend: 'copyHtml5'
+            //}),
+            $.extend(true, {}, buttonCommon, {
+                extend: 'excelHtml5'
+            })//,
+            //$.extend(true, {}, buttonCommon, {
+            //    extend: 'pdfHtml5'
+            //})
             ]
         });
     });
