--- a/HappinessMetric/Views/Report/UserReport.cshtml
+++ b/HappinessMetric/Views/Report/UserReport.cshtml
@@ -17,7 +17,7 @@
 <script src="~/Scripts/alert.js"></script>
 <form class="container" id="userreportform">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <h4 class="userrpeort">Rating Report</h4>
         </div>
     </div>
@@ -67,8 +67,8 @@
             }
         };
         $('#userreporttable').DataTable({
-            "scrollY": 200,
             "scrollX": true,
+            "pageLength": 10,
             dom: 'Bfrtip',
             buttons: [
             //$.extend(true, {}, buttonCommon, {
