Fixed Column width for datatable
Fixed Column width for datatable in Report page

--- a/HappinessMetric/Content/Site.css
+++ b/HappinessMetric/Content/Site.css
@@ -204,3 +204,13 @@ li.tabactive p {
 .margintop {
     margin-top:1% !important;
 }
+
+/*.userreporttable {
+    width:100% !important;
+}*/
+#userreporttable td.ellipsis {
+    max-width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
