--- a/HappinessMetric/Views/Report/UserReport.cshtml
+++ b/HappinessMetric/Views/Report/UserReport.cshtml
@@ -13,6 +13,7 @@
 <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.27/build/pdfmake.min.js"></script>
 <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.27/build/vfs_fonts.js"></script>
 <script src="https://cdn.datatables.net/buttons/1.3.1/js/buttons.html5.min.js"></script>
+
 <script src="~/Scripts/jquery.toast.js"></script>
 <script src="~/Scripts/alert.js"></script>
 <form class="container" id="userreportform">
@@ -21,31 +22,32 @@
             <h4 class="userrpeort">Rating Report</h4>
         </div>
     </div>
-    <table id="userreporttable" class="table table-striped table-bordered nowrap">
+
+    <table id="userreporttable" class="table table-striped table-bordered nowrap" >
         <thead>
             <tr>
-                <th>Project</th>
-                <th>Sprint</th>
-                <th>Developer</th>
-                <th>Rating</th>
-                <th>What feels best right now?</th>
-                <th>What feels worst right now?</th>
-                <th>What would increase your happiness index?</th>
-                <th>Created on</th>
+                <th style="width:10px">Project</th>
+                <th style="width:10px">Sprint</th>
+                <th style="width:10px">Developer</th>
+                <th style="width:10px">Rating</th>
+                <th style="width:20px !important">What feels best right now?</th>
+                <th style="width:10px">What feels worst right now?</th>
+                <th style="width:10px">What would increase your happiness index?</th>
+                <th style="width:10px">Created on</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@Html.DisplayFor(ModelItem => item.Project) </td>
-                    <td>@Html.DisplayFor(ModelItem => item.Sprint) </td>
-                    <td>@Html.DisplayFor(ModelItem => item.Developer) </td>
-                    <td>@Html.DisplayFor(ModelItem => item.HappyRatingwithTeam) </td>
-                    <td>@Html.DisplayFor(ModelItem => item.FeelsBest) </td>
-                    <td>@Html.DisplayFor(ModelItem => item.FeelsWorst) </td>
-                    <td>@Html.DisplayFor(ModelItem => item.IncreaseHappiness) </td>
-                    <td>@Html.DisplayFor(ModelItem => item.CreatedOn) </td>
+                    <td class="ellipsis">@Html.DisplayFor(ModelItem => item.Project) </td>
+                    <td class="ellipsis">@Html.DisplayFor(ModelItem => item.Sprint) </td>
+                    <td class="ellipsis">@Html.DisplayFor(ModelItem => item.Developer) </td>
+                    <td class="ellipsis">@Html.DisplayFor(ModelItem => item.HappyRatingwithTeam) </td>
+                    <td class="ellipsis">@Html.DisplayFor(ModelItem => item.FeelsBest) </td>
+                    <td class="ellipsis">@Html.DisplayFor(ModelItem => item.FeelsWorst) </td>
+                    <td class="ellipsis">@Html.DisplayFor(ModelItem => item.IncreaseHappiness) </td>
+                    <td class="ellipsis">@Html.DisplayFor(ModelItem => item.CreatedOn) </td>
                 </tr>
             }
         </tbody>
@@ -54,11 +56,13 @@
 </form>
 <script type="text/javascript">
     $(document).ready(function () {
+        $("#userreporttable td.ellipsis").hover(function () {
+            $(this).prop('title', $.trim($(this).text()));
+        });
         var buttonCommon = {
             exportOptions: {
                 format: {
-                    body: function (data, row, column, node) {
-                        // Strip $ from salary column to make it numeric
+                    body: function (data, row, column, node) {                        
                         return column === 5 ?
                             data.replace(/[$,]/g, '') :
                             data;
@@ -69,8 +73,11 @@
         $('#userreporttable').DataTable({
             "scrollX": true,
             "pageLength": 10,
+            "bAutoWidth": false,
+            fixedColumns:   true,
             dom: 'Bfrtip',
-            buttons: [
+            
+           buttons: [
             //$.extend(true, {}, buttonCommon, {
             //    extend: 'copyHtml5'
             //}),
@@ -80,7 +87,9 @@
             //$.extend(true, {}, buttonCommon, {
             //    extend: 'pdfHtml5'
             //})
+              
             ]
+           
         });
     });
 </script>
