--- a/HappinessMetric/Views/Shared/_Layout.cshtml
+++ b/HappinessMetric/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <title>Happiness Metric</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
@@ -13,6 +13,8 @@
     <link href="~/Content/jquery.toast.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-1.12.4.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery.toast.js"></script>
+    <script src="~/Scripts/alert.js"></script>
     @{
         var userModel = new HappinessMetric.Models.UserViewModel
         {
@@ -50,11 +52,11 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
-                        @if (userModel.IsAdmin)
-                        {
-                            <li class="tabactive"><a href="~/Home/Index"><p>Home</p></a></li>
+                        @*@if (userModel.IsAdmin)
+                        {*@
+                        <li class="tabactive"><a href="~/Home/Index"><p>Home</p></a></li>
                             <li class="tabactive"><a href="~/Report/UserReport"><p>Report</p></a></li>
-                        }
+                        @*}*@
                         <li><a class="smallfont" href="#">Welcome <span class="smallfont">@userModel.UserName</span></a></li>
                     </ul>
                 </div>
