--- a/HappinessMetric/Views/Report/UserReport.cshtml
+++ b/HappinessMetric/Views/Report/UserReport.cshtml
@@ -3,19 +3,18 @@
     ViewBag.Title = "UserReport";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
+<<link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
 <link href="~/Content/buttons.bootstrap.min.css" rel="stylesheet" />
-<link href="~/Content/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="https://cdn.datatables.net/buttons/1.3.1/css/buttons.dataTables.min.css" rel="stylesheet" />
+<link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <script src="~/Scripts/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
 <script src="https://cdn.datatables.net/buttons/1.3.1/js/dataTables.buttons.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.27/build/pdfmake.min.js"></script>
 <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.27/build/vfs_fonts.js"></script>
 <script src="https://cdn.datatables.net/buttons/1.3.1/js/buttons.html5.min.js"></script>
-
-<script src="~/Scripts/jquery.toast.js"></script>
-<script src="~/Scripts/alert.js"></script>
 <form class="container" id="userreportform">
     <div class="row">
         <div class="col-sm-3">
