--- a/HappinessMetric/Views/Report/UserReport.cshtml
+++ b/HappinessMetric/Views/Report/UserReport.cshtml
@@ -26,7 +26,7 @@
             <tr>
                 <th>Project</th>
                 <th>Sprint</th>
-                <th>Developer</th>
+                <th>UserName</th>
                 <th>Rating</th>
                 <th>What feels best right now?</th>
                 <th>What feels worst right now?</th>
