Happiness Survey Tittle image Added
Happiness Survey Tittle image Added

--- a/HappinessMetric/Views/Shared/_Layout.cshtml
+++ b/HappinessMetric/Views/Shared/_Layout.cshtml
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Happiness Survey</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="~/Images/happiness_emoji.png" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
-      <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
