--- a/HappinessMetric/Views/Shared/_Layout.cshtml
+++ b/HappinessMetric/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Happiness Survey</title>
     <link href="~/Images/happiness_emoji.png" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
